--- a/optimizers-comparison.ipynb
+++ b/optimizers-comparison.ipynb
@@ -516,28 +516,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"contours_evaluation_optimizers.gif\">"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from IPython.display import HTMLb\n",
-    "HTML('<img src=\"contours_evaluation_optimizers.gif\">')"
+    "# from IPython.display import HTMLb\n",
+    "# HTML('<img src=\"contours_evaluation_optimizers.gif\">')"
    ]
   },
   {
@@ -549,28 +536,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"saddle_point_evaluation_optimizers.gif\">"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from IPython.display import HTML\n",
-    "HTML('<img src=\"saddle_point_evaluation_optimizers.gif\">')"
+    "# from IPython.display import HTML\n",
+    "# HTML('<img src=\"saddle_point_evaluation_optimizers.gif\">')"
    ]
   },
   {
